<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/layout_smart"
    android:background="@color/white"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_all_order"
        android:id="@+id/course_0"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="@color/course_list_key_color"
        android:textSize="@dimen/medium_sp_16"/>
    <View
        android:layout_width="wrap_content"
        android:layout_height="0.5dp"
        android:background="@color/gray_border"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_nopayment"
        android:id="@+id/course_1"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="@color/course_list_key_color"
        android:textSize="@dimen/medium_sp_16"/>
    <View
        android:layout_width="wrap_content"
        android:layout_height="0.5dp"
        android:background="@color/gray_border"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_nodelivery"
        android:id="@+id/course_2"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="@color/course_list_key_color"
        android:textSize="@dimen/medium_sp_16"/>
    <View
        android:layout_width="wrap_content"
        android:layout_height="0.5dp"
        android:background="@color/gray_border"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_noconfirm"
        android:id="@+id/course_3"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="@color/course_list_key_color"
        android:textSize="@dimen/medium_sp_16"/>
    <View
        android:layout_width="wrap_content"
        android:layout_height="0.5dp"
        android:background="@color/gray_border"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_noevaluate"
        android:id="@+id/course_4"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="@color/course_list_key_color"
        android:textSize="@dimen/medium_sp_16"/>
    <View
        android:layout_width="wrap_content"
        android:layout_height="0.5dp"
        android:background="@color/gray_border"/>
    <!--<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_complete"
        android:id="@+id/course_5"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="@color/course_list_key_color"
        android:textSize="@dimen/medium_sp_16"
        />
    <View
        android:layout_width="wrap_content"
        android:layout_height="0.5dp"
        android:background="@color/gray_border"/>-->
</LinearLayout>